--- a/Front-end/partials/sobre.html
+++ b/Front-end/partials/sobre.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/sobre.css">
     <link rel="stylesheet" href="../style/footer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <title>Sobre Nós</title>
 </head>
 <body>
        <!--HEADER-->
@@ -47,11 +48,11 @@
     
     <div class="container">
         <div class="row">
-          <div class="col-sm">
+          <div class="col-sm my-5 ">
 
             <h4 class="titulo_sobre"> SOBRE NÓS </h4>
                 <br>
-            <p class="texto_sobre"> A gM barber  é  especializada nos cuidados estéticos e do bem-estar masculino. Contando com profissionais experientes no mercado, atuamos não somente no corte, mas oferecemos uma experiência de conforto, favorecendo a mente um momento de relaxamento e descanso.
+            <p class="texto_sobre"> A GM barber  é  especializada nos cuidados estéticos e do bem-estar masculino. Contando com profissionais experientes no mercado, atuamos não somente no corte, mas oferecemos uma experiência de conforto, favorecendo a mente um momento de relaxamento e descanso.
                 <br><br>
 Um ambiente preparado com profissionalismo para que não tenhamos apenas clientes, mas amigos. Cremos que a ética no local de trabalho deve ser algo que traga conforto para os nossos clientes amigos, criando uma ambiência de bem-estar e confiabilidade.
                 <br><br>
@@ -61,8 +62,8 @@ Agende hoje mesmo um horário, e veja com seus próprios olhos que fazer parte d
                 <br><br>
 Bem-Vindo ao Club! </p>
           </div>
-          <div class="col-sm">
-            <img src="../img/Background/IMG_0518.jpg" alt="" class="imagem_sobre">
+          <div class="col-sm my-5 ml-5">
+            <img src="../img/Background/IMG_0518.jpg "  alt="" class="imagem_sobre" width="700" height="520">
           </div>
         </div>
       </div>
@@ -107,9 +108,8 @@ Bem-Vindo ao Club! </p>
     </footer>
 
     
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
 </html>
