--- a/Front-end/style/barbeiros.css
+++ b/Front-end/style/barbeiros.css
@@ -5,7 +5,7 @@ body {
 
 
 .h1-barbeiros{
-    font-size: 50px;
+    font-size: 40px;
 
     margin-left: 25vh;
 
@@ -17,13 +17,14 @@ body {
 .container-barbeiros{
     display: flex;
     justify-content: center;
-
+    padding: 50px;
 }
 
 
 /*Barbeiro 1*/
 .barbeiro1{
-    padding: 2vh
+    padding: 2vh;
+   margin-right: 195px;
 }
 
 
