--- a/Front-end/partials/localidade.html
+++ b/Front-end/partials/localidade.html
@@ -12,13 +12,46 @@
     <title>Localidade</title>
 </head>
 <body>
-        
+        <!--HEADER-->
+    <header class="papai">
+      <div class="logo">
+          <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
+      </div>
+
+      <ul class="nav">
+          <li class="nav-item">
+              <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+          </li>
+          <li class="nav-item">
+              <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+          </li>
+          <li class="nav-item">
+              <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+              
+          </li>        
+          <li class="nav-item">
+              <a class= "nav-link" href="localidade.html"> Localidade</a>
+               
+          </li>
+          <li class="nav-item">
+              <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+              
+          </li>
+          
+          <li class="nav-item">
+              <a class= "nav-link" href="login.html"> Login</a>
+              
+          </li>
+      </ul>
+     </header>
 
            <!--MAIN-->
 
            <main>
 
-            <h1 > EM  CONSTRUÇÃO </h1>
+            <h1 > EM  CONSTRUÇÃO 👷🏗️</h1>
                     <br>
                     <H2>Aguarde...</H2>
 
@@ -26,15 +59,12 @@
                         <div class="spinner-border " role="status">
                           <span class="sr-only">Loading...</span>
                         </div>
-                      </div>
+                      </div> 
                        <br><br>
 
                 
 
-                  <img class="logo" src="../img/header/GM -logo-black (1).png" alt="" height="420" width="500">
-
-
-
+                  <img class="logo-localidade" src="../img/header/GM -logo-black (1).png" alt="" height="420" width="500">
            </main>
 
 
