--- a/Front-end/style/localidade.css
+++ b/Front-end/style/localidade.css
@@ -1,14 +1,9 @@
-.logo{
-margin-left: 35%;
+main{
+    text-align: center;
 }
 
 h1{
 
-    padding-top: 55px;
-    margin-left: 38%;
+    padding-top: 50px;
 }
-h2{
-    margin-left: 45%;
 
-    
-}
