--- a/Front-end/style/header.css
+++ b/Front-end/style/header.css
@@ -16,9 +16,9 @@ body {
     margin: -3px 74px -5px;
 }
 
-.nav {
+.navbar {
     display: flex;
-    list-style: none;
+   list-style: none;
 }
 
 .nav-link {
