--- a/Front-end/style/footer.css
+++ b/Front-end/style/footer.css
@@ -1,18 +1,16 @@
 .footer {
-    position: fixed;                
+    /* position: fixed;                 */
     width: 100%;
-    height: 90px;
+    height: 200px;
     
-    background: rgba(0, 0, 0, 0.98);
-    bottom: 0;
-
+    background: black;
 }
 
 
 .titulo-rede-sociais {
     /* Redes sociais */
 
-    position: fixed;
+    /* position: fixed; */
     width: 207px;
     left: 0;
     text-align: center;
@@ -27,7 +25,7 @@
 .logo-instagram {
     /* instagram 1 */
 
-    position: fixed;
+    /* position: fixed; */
     width: 40px;
     height: 42px;
     left: 55px;
@@ -38,7 +36,7 @@
 .logo-facebook {
     /* facebok 1 */
 
-    position: fixed;
+    /* position: fixed; */
     width: 42px;
     height: 45px;
     left: 98px;
@@ -50,7 +48,7 @@
 .cnpj {
     /* cnpj : 00.000.000/0000-01 */
 
-    position: fixed;
+    /* position: fixed; */
     height: 20px;
     left: 470px;
     text-transform: uppercase;
@@ -68,7 +66,7 @@
 .email-phone {
     /* gmbarbershop@mail.com | (11) 97777-0000 */
     display: inline-block;
-    position: fixed;
+    /* position: fixed; */
     width: 416px;
     height: 20px;
     left: 206px;
@@ -82,7 +80,7 @@
 
 .termo {
     /* termo de uso | politica e privacidade */
-    position: fixed;
+    /* position: fixed; */
     left: 550px;
     font-weight: normal;
     font-size: 14px;
@@ -100,17 +98,18 @@
 .bandeira-visa {
     /* visa-logo-5 1 */
 
-    position: fixed;
+    /* position: fixed; */
     width: 45px;
-    bottom: 10px;
-    left: 67%;
+    /* bottom: 10px;
+    left: 67%; */
+    height: 30px;
 }
 
 .bandeira-pagseguro {
 
     /* Logo_PagSeguro 1 */
 
-    position: fixed;
+    /* position: fixed; */
     width: 120px;
     height: 44px;
     left: 72%;
@@ -121,7 +120,7 @@
 
     /* elo-logo-1-1 1 */
 
-    position: fixed;
+    /* position: fixed; */
     width: 70px;
     height: 28px;
     left: 83%;
@@ -131,14 +130,14 @@
 .logo-footer {
 
     /* GM -logo-white 2 */
-    position: fixed;
+    /* position: fixed; */
     width: 105px;
     left: 90%;
 }
 
 .container2 {
 
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     height: 120px;
     left: 0px;
@@ -150,7 +149,7 @@
 
 .site-blindado {
     /* logo_siteblindado12 1 */
-    position: fixed;
+    /* position: fixed; */
     width: 140px;
     left: 52px;
     
@@ -159,7 +158,7 @@
 .ssl {
     /* ssl 1 */
 
-    position: fixed;
+    /* position: fixed; */
     width: 90px;
     left: 253px;
     top: 120%;
