Finalizando a minha tela de login

--- a/Front-end/partials/login.html
+++ b/Front-end/partials/login.html
@@ -49,7 +49,7 @@
 
        <div class="login"> 
        <form class="background_login col-md-10 py-2" >
-        <h3>ENTRAR</h3>
+        <h3 class="entrar">ENTRAR</h3>
         <hr>
         <br>
         <div class="form-group">
