--- a/Front-end/partials/footerLucas.html
+++ b/Front-end/partials/footerLucas.html
@@ -16,7 +16,7 @@
         <div class="container-footer">
             <div class="redes-sociais-cnpj">
                 <h2 class="rede-social-nome">Rede Social</h2>
-                <h2 class="cnpj">cnpj : 00.000.000/0000-01</h2>
+                <h2 class="cnpj">Cnpj : 00.000.000/0000-01</h2>
             </div>
 
             <div class="meio-footer">
