--- a/Front-end/partials/footerLucas.html
+++ b/Front-end/partials/footerLucas.html
@@ -40,7 +40,7 @@
             <div class = "container2-footer">
                 <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
                 <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
-                <h2 class="copy-right"> COPYRIGHT@EMAIL.COM  2020</h2>
+                <h2 class="copy-right"> Copyright@gmbarbershop@contato.com 2021</h2>
              </div>
     </footer>
     
