--- a/Front-end/style/footer.css
+++ b/Front-end/style/footer.css
@@ -1,354 +1,118 @@
-.footer {
-    /* position: fixed;                 */
-    width: 100%;
-    height: 200px;
-    
-    background: black;
+body {
+    margin: 0%;
+    padding: 0%;
 }
 
+.container-footer{
+    background-color: black;
+}
 
-.titulo-rede-sociais {
-    /* Redes sociais */
+.redes-sociais-cnpj{
+    display: flex;
+    margin-left: 65px;
+    margin-top: 2vw;
+    color: white;
+}
 
-    /* position: fixed; */
-    width: 207px;
-    left: 0;
-    text-align: center;
+.rede-social-nome{
+    margin-left: 3vw;
+}
+
+.cnpj {
+    /* cnpj : 00.000.000/0000-01 */
+    margin-left: 22vw;
     text-transform: uppercase;
-    color: #FFFFFF;
-    font-family: 'Bebas Neue', cursive;
-    font-size: 25px;
-    bottom: 39px;
-    right: 20px;
+    font-family: 'Bebas Neue', cursive;   
 }
 
+.meio-footer{
+    margin-left: 145px;
+    display: flex;
+    color: white;
+}
 
 .logo-instagram {
-    /* instagram 1 */
-
-    /* position: fixed; */
     width: 40px;
-    height: 42px;
-    left: 55px;
-    border-radius: 31px;
-    bottom: 5px;
+    height: 42px; 
+    
 }
 
 .logo-facebook {
-    /* facebok 1 */
-
-    /* position: fixed; */
     width: 42px;
     height: 45px;
-    left: 98px;
-    bottom: 5px;
-    border-radius: 31px;
 }
 
-/* BASE DO MEIO , CNPJ */
-.cnpj {
-    /* cnpj : 00.000.000/0000-01 */
-
-    /* position: fixed; */
-    height: 20px;
-    left: 470px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    font-family: 'Bebas Neue', cursive;
-    bottom: 60px;
-    
-}
-
-.ultima-linha {
-    display: flex;
-
-}
-
-.email-phone {
+.email-phone {   
     /* gmbarbershop@mail.com | (11) 97777-0000 */
-    display: inline-block;
-    /* position: fixed; */
-    width: 416px;
-    height: 20px;
-    left: 206px;
-    font-weight: normal;
+   
+    margin-left: 50px;
+    margin-top: 18px;
     font-size: 14px;
     text-transform: uppercase;
-    color: #FFFFFF;
-    bottom: 0;
     font-family: 'Arial, Helvetica, sans-serif';
 }
 
 .termo {
     /* termo de uso | politica e privacidade */
     /* position: fixed; */
-    left: 550px;
+    margin-left: 30px;
+    margin-top: 18px;
     font-weight: normal;
     font-size: 14px;
     text-transform: uppercase;
-    color: #FFFFFF;
     font-family: 'Arial, Helvetica, sans-serif';
-    bottom: 5px;
-}
 
-
-.bandeiras {
-    display: flex;
 }
 
 .bandeira-visa {
-    /* visa-logo-5 1 */
-
-    /* position: fixed; */
+    margin-left: 30px;
+    margin-top: 18px;
     width: 45px;
-    /* bottom: 10px;
-    left: 67%; */
     height: 30px;
+    margin-left: 50px;
 }
 
 .bandeira-pagseguro {
-
-    /* Logo_PagSeguro 1 */
-
-    /* position: fixed; */
+    margin-left: 10px;
+    margin-top: 13px;
     width: 120px;
     height: 44px;
-    left: 72%;
-    bottom: 0;
 }
 
 .bandeira-elo {
-
-    /* elo-logo-1-1 1 */
-
-    /* position: fixed; */
+    margin-left: 10px;
+    margin-top: 20px;
     width: 70px;
     height: 28px;
-    left: 83%;
-    bottom: 10px;
 }
 
-.logo-footer {
-
-    /* GM -logo-white 2 */
-    /* position: fixed; */
-    width: 105px;
-    left: 90%;
-}
-
-.container2 {
-
-    /* position: fixed; */
-    width: 100%;
-    height: 120px;
-    left: 0px;
-    background: rgba(61, 14, 33, 0.509);
-    ;
-}
+.logo-footer-barber{
+    margin-top: -54px;
+    margin-left: 10px;
+    width: 110px;
     
+}
 
 
+/*Contaner 2*/
 .site-blindado {
-    /* logo_siteblindado12 1 */
-    /* position: fixed; */
     width: 140px;
-    left: 52px;
+    margin-left: 100px;
+
     
 }
-
 .ssl {
-    /* ssl 1 */
-
-    /* position: fixed; */
     width: 90px;
     left: 253px;
-    top: 120%;
+    margin-left:15px
 }
 
 .copy-right {
-    /* COPYRIGHT@EMAIL.COM 2020 */
-    position: fixed;
-    width: 175px;
-    left: 631px;
-    top: 120%;
-    font-weight: normal;
+  
     font-size: 13px;
     text-transform: lowercase;
-    font-feature-settings: 'pnum'on, 'lnum'on;
-    color: #000000;
-}
-
-
-/* RESPONSIVE */
-
-/* Desktop */
-
-@media(min-width:500px) and (max-width:700px){
-   
-    .cnpj {
-       
-       display: none;
-        
-    }
-    .email-phone {
-    
-        
-        left: 206px; 
-        font-size: 10px;
-        bottom: 40px;
-    }
-    .termo {
-        display: none;
-    }
-    
-.bandeira-visa {
-   
-    left: 35%;
-}
-
-.bandeira-pagseguro {
-    
-    left: 45%;
-}
-
-.bandeira-elo {
-
-    
-
-   
-    width: 53px;
-    height: 18px;
-    left: 71%;
-}
-
-.logo-footer {
-
-    /* GM -logo-white 2 */
-    position: fixed;
-    width: 100px;
-    left: 80%;
-}
-}
-@media(max-width:1250px){
-    .termo {
-        display:none;
-    }
-    .cnpj {
-        left: 200px;
-        font-size: 8px;
-    }
-        .email-phone {
-    
-        
-        left: 155px; 
-        font-size: 12px;
-        
-    }
-
-    .bandeira-visa {
-   
-      
-        position:absolute;
-    }
-
-    .bandeira-elo {
-        width: 53px;
-        height: 18px;
-      /* Resolver ainda */
-    }
-
-    
-}
-
-/* Android  = motog; Samsung; And old Iphone */
-
-@media(max-width:450px){
-    
-    .titulo-rede-sociais{
-        display: none;
-    }
-    .cnpj {
-       
-        bottom: 10px;
-         left: 40px;
-        
-         
-
-     }
-     .email-phone {
-     
-         
-         left: 10px; 
-         font-size: 12px;
-         bottom: 50px;
-     }
-     .termo {
-         display: none;
-     }
-     
- .bandeira-visa {
-    
-     left: 35%;
- }
- 
- .bandeira-pagseguro {
-     
-     left: 45%;
- }
- 
- .bandeira-elo {
- 
-     
- 
-    
-     width: 53px;
-     height: 18px;
-     left: 71%;
- }
- 
- .logo-footer {
- 
-     /* GM -logo-white 2 */
-     position: fixed;
-     width: 100px;
-     left: 80%;
- }
- .logo-instagram {
-     left: 12px;
-    width: 50px;
-    height: 45px;
-    bottom: 22px;
- }
-.logo-facebook{
-    left: 60px;
-    width: 52px;
-    height: 50px;
-    bottom: 20px;
-}
-.bandeira-elo{
-    display: none;
-}
-.bandeira-pagseguro{
-    display: none;
-}
-.bandeira-visa{
-    display: none;
-}
-.logo-footer{
-    left: 250px;
-    width: 105px;
-}
-}
-
-/* Iphone */
-
-@media(min-width:374px) and (max-width:450px){
-    .logo-footer{
-        left: 280px;
-    }
-    
-    .cnpj{
-        left: 70px;
-    }
-
+    font-weight: bold;
+    color:black;
+    text-align: center;
+    margin-top: -22px;
 }
