--- a/Front-end/style/header.copia.css
+++ b/Front-end/style/header.copia.css
@@ -9,16 +9,20 @@ body {
     width: 100%;
 
 }
+.logo{
+  max-width: 150px;
+}
 
 .logoMain {
     
     width: 85px;
-    margin: -3px 74px -5px;
+margin-left: 25px;
 }
 
-.navbar {
+.nav {
     display: flex;
    list-style: none;
+   margin-left: 20px;
 }
 
 .nav-link {
@@ -46,6 +50,8 @@ body {
 .menu-hambuguer{
 margin-top: 40px;
 margin-left: 15px;
+
+
 }
 
 #checkbox-menu{
