Criado a responsividade do header e aplicado em todas as telas

--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -13,11 +13,24 @@
     <title>Index</title>
 </head>
 <body>
-      <!--HEADER-->
-      <header class="papai">
+     <!--HEADER-->
+     <header class="papai">
         <div class="logo">
             <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
         </div>
+      
+      
+        <!--Hamburguer-->
+         <div class="menu-hambuguer">
+            <input type="checkbox" name="hamburguer" id="checkbox-menu">
+            <label for="checkbox-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+                
+            </label>
+      
+
 
         <ul class="nav">
             <li class="nav-item">
@@ -34,7 +47,7 @@
             </li>        
             <li class="nav-item">
                 <a class= "nav-link" href="localidade.html"> Localidade</a>
-                 
+                
             </li>
             <li class="nav-item">
                 <a class= "nav-link" href="atendimento.html"> Atendimento</a>
@@ -46,7 +59,10 @@
                 
             </li>
         </ul>
-       </header>
+    </div>
+
+           
+    </header>
     
 
        <!--FOOTER-->
