--- a/Front-end/partials/agendamento.html
+++ b/Front-end/partials/agendamento.html
@@ -15,41 +15,56 @@
 </head>
 
 <body>
-    <!--HEADER-->
-    <header class="papai">
-        <div class="logo">
-            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
-        </div>
-
-        <ul class="nav">
-            <li class="nav-item">
-                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
-
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
-
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
-                
-            </li>        
-            <li class="nav-item">
-                <a class= "nav-link" href="localidade.html"> Localidade</a>
-                 
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
-                
-            </li>
+  <!--HEADER-->
+  <header class="papai">
+    <div class="logo">
+        <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
+    </div>
+  
+  
+    <!--Hamburguer-->
+     <div class="menu-hambuguer">
+        <input type="checkbox" name="hamburguer" id="checkbox-menu">
+        <label for="checkbox-menu">
+            <span></span>
+            <span></span>
+            <span></span>
             
-            <li class="nav-item">
-                <a class= "nav-link" href="login.html"> Login</a>
-                
-            </li>
-        </ul>
-       </header>
-      
+        </label>
+  
+
+
+    <ul class="nav">
+        <li class="nav-item">
+            <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+        </li>
+        <li class="nav-item">
+            <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+        </li>
+        <li class="nav-item">
+            <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+            
+        </li>        
+        <li class="nav-item">
+            <a class= "nav-link" href="localidade.html"> Localidade</a>
+            
+        </li>
+        <li class="nav-item">
+            <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+            
+        </li>
+        
+        <li class="nav-item">
+            <a class= "nav-link" href="login.html"> Login</a>
+            
+        </li>
+    </ul>
+</div>
+
+       
+</header>
 
     <main>
         <h1 class="h1-agendamento-horario">Horários</h1>
