--- a/Front-end/partials/header.html
+++ b/Front-end/partials/header.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/header.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>GM BarberShop</title>
-</head>
-<body>
-    
-       <!--HEADER-->
-       <header class="papai">
-        <div class="logo">
-            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <link rel="stylesheet" href="../style/header.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        
+        <title>GM BarberShop</title>
+    </head>
+    <body>
+        <!--HEADER-->
+        <header class="papai">
+            <div class="logo">
+                <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
+            </div>
+          
+          
+            <!--Hamburguer-->
+             <div class="menu-hambuguer">
+                <input type="checkbox" name="hamburguer" id="checkbox-menu">
+                <label for="checkbox-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    
+                </label>
+          
+
+
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+                </li>
+                <li class="nav-item">
+                    <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+                </li>
+                <li class="nav-item">
+                    <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+                    
+                </li>        
+                <li class="nav-item">
+                    <a class= "nav-link" href="localidade.html"> Localidade</a>
+                    
+                </li>
+                <li class="nav-item">
+                    <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+                    
+                </li>
+                
+                <li class="nav-item">
+                    <a class= "nav-link" href="login.html"> Login</a>
+                    
+                </li>
+            </ul>
         </div>
 
-        <nav class="navbar navbar-expand-lg fixed-top">
-
-            <!--Iniciando hamburguer-->
-            <button class="navbar-toggler  " type="button" data-toggle="collapse" data-target="#conteudo-navbar" 
-                aria-controls="conteudo-navbar" aria-expanded="false" aria-label="botão para a expanssão do menu">
-                
-                <!--Criando o desenho do menu hamburguer -->
-
-                <span class="navbar-toggler-icon "></span>
-            </button>
-
-
-
-            <li class="nav-item">
-                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
-
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
-
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
-                
-            </li>        
-            <li class="nav-item">
-                <a class= "nav-link" href="localidade.html"> Localidade</a>
-                 
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
-                
-            </li>
-            
-            <li class="nav-item">
-                <a class= "nav-link" href="login.html"> Login</a>
-                
-            </li>
-        </nav>
-       </header>
-
-       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+               
+        </header>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    </body>
 </html>
