--- a/Front-end/partials/localidade.html
+++ b/Front-end/partials/localidade.html
@@ -12,40 +12,56 @@
     <title>Localidade</title>
 </head>
 <body>
-        <!--HEADER-->
-    <header class="papai">
-      <div class="logo">
-          <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
-      </div>
+      <!--HEADER-->
+      <header class="papai">
+        <div class="logo">
+            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
+        </div>
+      
+      
+        <!--Hamburguer-->
+         <div class="menu-hambuguer">
+            <input type="checkbox" name="hamburguer" id="checkbox-menu">
+            <label for="checkbox-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+                
+            </label>
+      
 
-      <ul class="nav">
-          <li class="nav-item">
-              <a class= "nav-link" href="sobre.html"> Sobre nós</a>
 
-          </li>
-          <li class="nav-item">
-              <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
 
-          </li>
-          <li class="nav-item">
-              <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
-              
-          </li>        
-          <li class="nav-item">
-              <a class= "nav-link" href="localidade.html"> Localidade</a>
-               
-          </li>
-          <li class="nav-item">
-              <a class= "nav-link" href="atendimento.html"> Atendimento</a>
-              
-          </li>
-          
-          <li class="nav-item">
-              <a class= "nav-link" href="login.html"> Login</a>
-              
-          </li>
-      </ul>
-     </header>
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+                
+            </li>        
+            <li class="nav-item">
+                <a class= "nav-link" href="localidade.html"> Localidade</a>
+                
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+                
+            </li>
+            
+            <li class="nav-item">
+                <a class= "nav-link" href="login.html"> Login</a>
+                
+            </li>
+        </ul>
+    </div>
+
+           
+    </header>
 
            <!--MAIN-->
 
