--- a/Front-end/partials/sobre.html
+++ b/Front-end/partials/sobre.html
@@ -11,11 +11,24 @@
     <title>Sobre Nós</title>
 </head>
 <body>
-       <!--HEADER-->
-       <header class="papai">
+      <!--HEADER-->
+      <header class="papai">
         <div class="logo">
             <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
         </div>
+      
+      
+        <!--Hamburguer-->
+         <div class="menu-hambuguer">
+            <input type="checkbox" name="hamburguer" id="checkbox-menu">
+            <label for="checkbox-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+                
+            </label>
+      
+
 
         <ul class="nav">
             <li class="nav-item">
@@ -32,7 +45,7 @@
             </li>        
             <li class="nav-item">
                 <a class= "nav-link" href="localidade.html"> Localidade</a>
-                 
+                
             </li>
             <li class="nav-item">
                 <a class= "nav-link" href="atendimento.html"> Atendimento</a>
@@ -44,7 +57,10 @@
                 
             </li>
         </ul>
-       </header>
+    </div>
+
+           
+    </header>
     
     <div class="container">
         <div class="row">
