--- a/Front-end/partials/localidade.html
+++ b/Front-end/partials/localidade.html
@@ -88,5 +88,39 @@
            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
+
+           <!--FOOTER-->
+           <footer>
+            <div class="container-footer">
+                <div class="redes-sociais-cnpj">
+                    <h2 class="rede-social-nome">Rede Social</h2>
+                    <h2 class="cnpj">Cnpj : 00.000.000/0000-01</h2>
+                </div>
+    
+                <div class="meio-footer">
+                    <a target = "_blank" href="#"></a>
+                    <img src="../img/footer/instagram.jpg" alt="link-instagram" class="logo-instagram"></a>
+    
+                    <a  target = "_blank"  href="#">
+                    <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook"></a>
+                        
+                    <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>
+                    <h4 class="termo"> Termo de uso | Politica e Privacidade </h4>
+    
+                    <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
+                    <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
+                    <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
+    
+                    <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer-barber">
+                    </div>
+                </div>
+            
+                <div class = "container2-footer">
+                    <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
+                    <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
+                    <h2 class="copy-right"> Copyright@gmbarbershop@contato.com 2021</h2>
+                 </div>
+        </footer>
+        
 </body>
 </html>
