--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -66,50 +66,53 @@
     
 
      <main>
-        <h1 class="titulo">GM BARBER SHOP, <br>
-            O clássico <br>
-            barba , cabelo e bigode! </h1>
-           
-       
-            <a href="#" class="botao">
-                      <h1 class="titulo-botao">Marcar horario</h1> 
-            </a>    
+        <div class="container-botao">  
+                <h1 class="titulo">GM BARBER SHOP, <br>
+                    O clássico <br>
+                    barba , cabelo e bigode! </h1>
+                
+            
+                    <a href="#" class="botao">
+                            <h1 class="titulo-botao">Marcar horario</h1> 
+                    </a>
+        </div>    
      </main>
 
              <!--FOOTER-->
 
         
-    <footer>
-        <div class="container-footer">
-            <div class="redes-sociais-cnpj">
-                <h2 class="rede-social-nome">Rede Social</h2>
-                <h2 class="cnpj">Cnpj : 00.000.000/0000-01</h2>
-            </div>
-
-            <div class="meio-footer">
-                <a target = "_blank" href="#"></a>
-                <img src="../img/footer/instagram.jpg" alt="link-instagram" class="logo-instagram"></a>
-
-                <a  target = "_blank"  href="#">
-                <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook"></a>
-                    
-                <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>
-                <h4 class="termo"> Termo de uso | Politica e Privacidade </h4>
-
-                <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
-                <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
-                <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
-
-                <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer-barber">
-                </div>
-            </div>
+    
+             <footer>
+                <div class="container-footer">
+                    <div class="redes-sociais-cnpj">
+                        <h2 class="rede-social-nome">Rede Social</h2>
+                        <h2 class="cnpj">Cnpj : 00.000.000/0000-01</h2>
+                    </div>
         
-            <div class = "container2-footer">
-                <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
-                <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
-                <h2 class="copy-right"> Copyright@gmbarbershop@contato.com 2021</h2>
-             </div>
-    </footer>
+                    <div class="meio-footer">
+                        <a target = "_blank" href="#"></a>
+                        <img src="../img/footer/instagram.jpg" alt="link-instagram" class="logo-instagram"></a>
+        
+                        <a  target = "_blank"  href="#">
+                        <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook"></a>
+                            
+                        <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>
+                        <h4 class="termo"> Termo de uso | Politica e Privacidade </h4>
+        
+                        <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
+                        <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
+                        <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
+        
+                        <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer-barber">
+                        </div>
+                    </div>
+                
+                    <div class = "container2-footer">
+                        <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
+                        <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
+                        <h2 class="copy-right"> Copyright@gmbarbershop@contato.com 2021</h2>
+                     </div>
+            </footer>
 
      <!--JS-->
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
